# hmc5883l-embed-rs

./: .gitignore  ;  Cargo.toml  README.md  flash.sh
examples/stm32f1_basic/: Cargo.toml  stm32f1_basic.rs
examples/stm32f1_xyz_read/: Cargo.toml  stm32f1_xyz_read.rs
src/: hmc5883l.rs  lib.rs  main.rs
