[package]
name = "hmc5883l-embed"
version = "0.1.0"
edition = "2024"
description = "hmc5883l magnetometer driver for rust's embdedded-hal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nuclearcodecat/hmc5883l-embed-rs"
keywords = ["embedded-hal", "i2c", "sensor", "magnetometer"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
authors = ["nuclearcodecat"]

[dependencies]
embedded-hal = "0.2.7"
