[package]
name = "stm32f1_xyz_read"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-rtt-target = "0.2.0"
hmc5883l-embed = { path = "../../" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "stm32f1_xyz_read"
path = "stm32f1_xyz_read.rs"
